<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Ribbit</string>
    <string name="title_section1">Inbox</string>
    <string name="title_section2">Friends</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="username_hint">Username</string>
    <string name="password_hint">Password</string>
    <string name="login_text">SIGN IN</string>
    <string name="sign_up_text">Don\'t have an account? Sign Up!</string>
    <string name="title_activity_sign_up">SignUpActivity</string>
    <string name="email_hint">Email</string>
    <string name="sign_up_button_label">SIGN UP</string>
    <string name="cancel_button_label">CANCEL</string>
    <string name="sign_up_error_message">Please make sure you enter all the values!</string>
    <string name="error_title">Opps!</string>
    <string name="login_error_message">Please make sure you enter username and password</string>
    <string name="action_logout">Logout</string>
    <string name="empty_inbox_label">No new messages :(</string>
    <string name="empty_friends_label">Add friends to begin!</string>
    <string name="action_edit_friends">Edit Friends</string>
    <string name="title_activity_edit_friends">Edit Friends</string>
    <string name="action_camera">Camera</string>
    <string name="choose_option_title">Choose an option</string>
    <string name="error_external_storage">External storage not ready!</string>
    <string name="error_general_message">Sorry there was an error!</string>
    <string name="error_file_size">The selected file is too long</string>
    <string name="action_send">Send</string>

    <string-array name="camera_choices">
        <item>Take Picture</item>
        <item>Take Video</item>
        <item>Choose Picture</item>
        <item>Choose Video</item>
    </string-array>

    <string name="title_activity_recipients">Choose Recipients</string>
    <string name="success_message">Message sent!</string>
    <string name="title_activity_view_image">View Message</string>
    <string name="subtitle_text">A treehouse project</string>
    <string name="content_desc_user_avatar">User avatar</string>
    <string name="content_desc_user_check">User check</string>
    <string name="push_message">You have a new message from %s!</string>

</resources>
