<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/AuthBackground"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.ivpadim.ribbit.ui.SignUpActivity">

    <include layout="@layout/auth_common" />

    <LinearLayout
        android:id="@+id/fieldsLayout"
        style="@style/AuthFieldsLayout">

        <EditText
            android:id="@+id/usernameField"
            style="@style/AuthField"
            android:hint="@string/username_hint" />

        <EditText
            android:id="@+id/passwordField"
            style="@style/AuthField"
            android:ems="10"
            android:hint="@string/password_hint"
            android:inputType="textPassword" />

        <EditText
            android:id="@+id/emailField"
            style="@style/AuthField"
            android:ems="10"
            android:hint="@string/email_hint"
            android:inputType="textEmailAddress" />

    </LinearLayout>

    <LinearLayout
        style="@style/AuthLayoutButtons"
        android:orientation="horizontal"
        android:weightSum="2">

        <Button
            android:id="@+id/signUpButton"
            style="@style/AuthButton"
            android:layout_marginLeft="0dp"
            android:layout_marginRight="0dp"
            android:layout_weight="1"
            android:text="@string/sign_up_button_label" />

        <ImageView
            android:id="@+id/buttonDivider"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/button_divider" />

        <Button
            android:id="@+id/cancelButton"
            style="@style/AuthButton"
            android:layout_marginLeft="0dp"
            android:layout_marginRight="0dp"
            android:layout_weight="1"
            android:text="@string/cancel_button_label" />
    </LinearLayout>


</RelativeLayout>
